# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.97 - XXX

  From Chad Austin:

  - Allow Help() to be called multiple times, appending to the help
    text each call.

  From Gary Oberbrunner:

  - Add an Environment.Dump() method to print the contents of a
    construction environment.

  From Kevin Quick:

  - Fix the Builder name returned from ListBuilders and other instances
    of subclasses of the BuilderBase class.

  From Christoph Wiedemann:

  - Add an Environment.SetDefault() method that only sets values if
    they aren't already set.

  - Have the qt.py Tool not override variables already set by the user.

  - Add separate $QT_BINPATH, $QT_CPPPATH and $QT_LIBPATH variables
    so these can be set individually, instead of being hard-wired
    relative to $QTDIR.



RELEASE 0.96.1 - XXX

  From Craig Bachelor:

  - Handle white space in the executable Python path name within in MSVS
    project files by quoting the path.

  - Correct the format of a GUID string in a solution (.dsw) file so
    MSVS can correctly "build enable" a project.

  From Steven Knight:

  - Add a must_exist flag to Delete() to let the user control whether
    it's an error if the specified entry doesn't exist.  The default
    behavior is now to silently do nothing if it doesn't exist.

  - Package up the new Platform/darwin.py, mistakenly left out of 0.96.

  - Make the scons.bat REM statements into @REM so they aren't printed.

  - Make the SCons packaging SConscript files platform independent.

  From Anthony Roach:

  - Fix scanning of pre-compiled header (.pch) files for #includes,
    broken in 0.96.



RELEASE 0.96 - Wed, 18 Aug 2004 13:36:40 +0000

  From Chad Austin:

  - Make the CacheDir() directory if it doesn't already exist.

  - Allow construction variable substitutions in $LIBS specifications.
